# visualpy

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
static/css/: style.css
tests/: conftest.py  test_ast_parser.py  test_cli.py  test_cross_file.py  test_integration.py  test_mermaid.py  test_scanner.py  test_server.py  test_service_map.py  test_signatures.py  test_summarizer.py  test_translate.py  test_triggers.py
tests/fixtures/: hello.py
tests/fixtures/agentic_workflows/: create_proposal.py  error_demo_messy_pipeline.py  error_demo_realistic_etl.py  modal_webhook.py
visualpy/: __init__.py  __main__.py  cli.py  mermaid.py  models.py  server.py  translate.py
visualpy/analyzer/: __init__.py  _constants.py  ast_parser.py  cross_file.py  scanner.py  service_map.py  signatures.py  triggers.py
visualpy/summarizer/: __init__.py  llm.py
visualpy/templates/: base.html  error.html  overview.html  script.html
visualpy/templates/partials/: script_card.html  step_detail.html
