[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visualpy"
version = "0.1.0"
description = "Auto-visualise Python automations for non-technical stakeholders"
authors = [{name = "Alexandra Schwartz (alexmavro)"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
llm = ["litellm>=1.40.0"]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
visualpy = "visualpy.__main__:main"

[tool.setuptools.packages.find]
include = ["visualpy*"]

[tool.setuptools.package-data]
visualpy = ["templates/**/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
